WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265730
Fix nullptr deref in B3::ReduceStrength's handling of Trunc for double constants.
https://bugs.webkit.org/show_bug.cgi?id=265730
Summary
Fix nullptr deref in B3::ReduceStrength's handling of Trunc for double consta...
Mark Lam
Reported
2023-12-02 15:39:21 PST
rdar://116459635
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2023-12-02 15:44:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21218
EWS
Comment 2
2023-12-05 16:48:49 PST
Committed
271580@main
(ab0808f76fdb): <
https://commits.webkit.org/271580@main
> Reviewed commits have been landed. Closing PR #21218 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug