Cherry-pick 271580@main (ab0808f76fdb). https://bugs.webkit.org/show_bug.cgi?id=265730

Fix nullptr deref in B3::ReduceStrength's handling of Trunc for double constants.
    https://bugs.webkit.org/show_bug.cgi?id=265730
    rdar://116459635

    Reviewed by Yusuke Suzuki.

    We cannot run asInt64() on a ConstDoubleValue.  This patch fixes this by handling
    ConstDoubleValue separately and running asDouble() on it instead.

    * Source/JavaScriptCore/b3/B3ReduceStrength.cpp:

    Canonical link: https://commits.webkit.org/271580@main